# QXL-Diagnostics

./: .dockerignore  .env.example  .gitignore  BACKEND_PLAN.md  Dockerfile  README.md  add_service_schema.js  alembic.ini  create_new_pages.js  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  railway.toml  tsconfig.json  update-theme.js  update_blogs.js  vercel.json
alembic/: env.py
alembic/versions/: 0001_init.py  0002_sessions_and_role.py  0003_domain_tables.py  0004_auth_overhaul.py  0005_payments.py  0006_admin_elevation.py  0007_catalog_kb_bookings.py  0008_phone_only_patients.py  0009_user_date_of_birth.py  0010_home_collection_session.py  0011_slugs_and_reviews.py  0012_multi_booking_payments.py  0013_catalog_images_and_gallery.py  0014_sitesettings_contact_info.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  oauth.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  booking.py  catalog.py  content.py  conversation.py  doc_chunk.py  file.py  lead.py  login_challenge.py  payment.py  prescription.py  session.py  user.py
app/repositories/: __init__.py  booking_repository.py  center_repository.py  chunk_repository.py  content_repository.py  file_repository.py  lead_repository.py  login_challenge_repository.py  package_repository.py  (+4 more)
public/: llms.txt
scripts/: cloudinary_image_map.json  migrate_images_to_cloudinary.py  promote_admin.py  replace_local_image_refs.py  seed_data.py
src/: middleware.ts
src/lib/: api.ts  (+17 more)
tests/: conftest.py  test_auth.py  test_chat.py  test_files.py
(+355 files in other folders)
