[project]
name = "qxl-backend"
version = "0.1.0"
description = "QXL Diagnostics backend: FastAPI + Auth0 + PostgreSQL + Supabase Storage + OpenAI RAG streaming chat."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "supabase>=2.9.0",
    "openai>=1.54.0",
    "pgvector>=0.3.5",
    "tiktoken>=0.8.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "tenacity>=9.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# B008: FastAPI uses function calls in Depends() defaults.
# UP037: string forward-refs are required for SQLAlchemy relationship() resolution.
ignore = ["B008", "UP037"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
